# short-url-mongo

./: .gitignore  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  crud.py  keygen.py  main.py  models.py  routers.py  schemas.py
