[tool.poetry]
name = "short-url-mongo"
version = "0.1.0"
description = ""
authors = ["solomevich-egor <solomevich.egor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
types-passlib = "^1.7.7.20240105"
types-requests = "^2.31.0.20231231"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
pymongo = "^4.6.1"
motor = "^3.3.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
beanie = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
